--- a/.github/workflows/falcor-compiler-perf-test.yml
+++ b/.github/workflows/falcor-compiler-perf-test.yml
@@ -73,4 +73,4 @@ jobs:
         $filename = '${{ fromJson(steps.download.outputs.downloaded_files)[0] }}'
         Expand-Archive $filename -DestinationPath .\falcor-perf-test
         $env:PATH += ";.\bin\windows-${{matrix.testPlatform}}\${{matrix.configuration}}";
-        .\falcor-perf-test\bin\Release\falcor_perftest.exe
+        .\falcor-perf-test\bin\Release\falcor_perftest.exe > .\falcor-perf-test\falcor-perf-test.results
