updated naming and added comments

--- a/.github/workflows/falcor-compiler-perf-test.yml
+++ b/.github/workflows/falcor-compiler-perf-test.yml
@@ -79,7 +79,7 @@ jobs:
         $filename = '${{ fromJson(steps.download.outputs.downloaded_files)[0] }}'
         Expand-Archive $filename -DestinationPath .\falcor-perf-test
         $env:PATH += ";.\bin\windows-${{matrix.testPlatform}}\${{matrix.configuration}}";
-        .\falcor-perf-test\bin\Release\falcor_perftest.exe > .\falcor-perf-test\falcor-perf-test.results
+        .\falcor-perf-test\bin\Release\falcor_perftest.exe > .\falcor-perf-test\falcor-compile-time.results
 
     - name: extract results
-      run: python .\temp\falcor-perf-test-extract-results.py .\falcor-perf-test\falcor-perf-test.results
+      run: python .\temp\falcor-compile-time-extract-results.py .\falcor-perf-test\falcor-compile-time.results
